--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
     <body>
-         <div class="main-container"></div>       
+    <div class="main-container"> 
 
             <header> 
             <img  class="logo" src="images/logo/Booki.png">
