--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <div class="button-filtres">
 
                     <button class="economique-button"> <i class="fa-solid fa-money-bill-wave"
-                            style="color: #0a64ff;"></i>Economique</button>
+                            style="color: #0a64ff;"></i><span class="button_message">Économique</span></button>
                     <button class="family-button"><i class="fa-solid fa-person"
-                            style="color: #0a60f5;"></i>Familiale</button>
+                            style="color: #0a60f5;"></i><span class="button_message">Familial</span></button>
                     <button class="romantique-button"><i class="fa-solid fa-heart"
-                            style="color: #005cfa;"></i>Romantique</button>
-                    <button class="pepites-button"><i class="fa-solid fa-fire" style="color: #065ff9;"></i>Nos
-                        Pépites</button>
+                            style="color: #005cfa;"></i><span class="button_message">Romantique</span></button>
+                    <button class="pepites-button"><i class="fa-solid fa-fire" style="color: #065ff9;"></i><span class="button_message">Nos
+                        Pépites</span></button>
 
 
                         
