v12 sans media queries

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main-container">
 
         <header>
-            <span><img src="images/logo/Booki@3x.png"></span>
+            <span class="logo"><img src="images/logo/Booki@3x.png"></span>
             <nav>
                 <ul class="nav-link">
                     <li>
