fix media queries

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="hebergements-and-populaires">
 
-                <section class="hebergements">
+                <section class="hebergements hebergements_media">
 
                     <h2 id="hebergements">Hébergements à Marseille</h2>
 
